[project]
name = "redis-rate-limiters"
version = "0.4.5"
description = "Distributed rate limiters"
authors = [{ name = "Sondre Lillebø Gundersen", email = "sondrelg@live.no" }]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-4-Clause"
keywords = [
    "async",
    "sync",
    "rate",
    "limiting",
    "limiters",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic",
    "redis",
]

[project.urls]
Homepage = "https://github.com/otovo/redis-rate-limiters"
Repository = "https://github.com/otovo/redis-rate-limiters"

[dependency-groups]
dev = [
    "pre-commit",
    "printf-log-formatter",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "types-redis",
    "pyright",
    "pytest-randomly",
    "pytest-socket",
]

[tool.hatch.build.targets.sdist]
include = ["limiters"]

[tool.hatch.build.targets.wheel]
include = ["limiters"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--allow-hosts=127.0.0.1,::1,10.5.0.2,10.5.0.3,10.5.0.4"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "W", "C90", "C4", "I", "T20", "PT", "SIM", "RUF"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses=false
mark-parentheses=false
parametrize-names-type="csv"

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true
show_traceback = true
strict_optional = true
warn_return_any = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool."pydantic-mypy"]
warn_untyped_fields = true

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
